src/libastrodb/object.h

struct adb_db;
int adb_set_get_objects(struct adb_object_set *set);
int adb_set_hash_key(struct adb_object_set *set, const char *key);
/*! \fn void* adb_table_get_object (adb_table *table, char *id, char *field);
 * \brief Get object from catalog based on ID
 * \return pointer to object or NULL
 * \ingroup dataset
 */
int adb_set_get_object(struct adb_object_set *set,
	const void *id, const char *field, const struct adb_object **object);
int adb_table_get_object(struct adb_db *db, int table_id,
	const void *id, const char *field, const struct adb_object **object);